Small efficiency gains + bug squashing

--- a/client/src/components/common/camera_settings/OverlayMessage.module.css
+++ b/client/src/components/common/camera_settings/OverlayMessage.module.css
@@ -1,18 +1,22 @@
-.table {
+.history {
   width: 100%;
   max-width: 100%;
 }
 
-tbody,
-tr:not(:first-child) {
+.history_message:not(:first-child) {
   border-top: 1px solid rgba(0, 0, 0, 0.17);
 }
 
-.table_message {
+.history_text {
   overflow-wrap: break-word;
   word-wrap: break-word;
   -ms-hyphens: auto;
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
+}
+
+.history_time {
+  font-size: 0.8em;
+  color: #646464;
 }
